--- a/src/main/gui/mainView.fxml
+++ b/src/main/gui/mainView.fxml
@@ -27,7 +27,7 @@
                               <Insets left="5.0" />
                            </padding>
                            <HBox.margin>
-                              <Insets right="80.0" />
+                              <Insets right="85.0" />
                            </HBox.margin>
                         </Label>
                         <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" text="-">
@@ -57,14 +57,28 @@
    <center>
       <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
          <children>
-            <Label prefHeight="30.0" text="Movies">
-               <font>
-                  <Font name="System Bold" size="16.0" />
-               </font>
-               <padding>
-                  <Insets left="5.0" />
-               </padding>
-            </Label>
+            <HBox prefHeight="30.0" prefWidth="774.0">
+               <children>
+                  <Label prefHeight="30.0" text="Movies">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                     <padding>
+                        <Insets left="5.0" />
+                     </padding>
+                  </Label>
+                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" text="-">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" text="+">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+               </children>
+            </HBox>
             <TableView prefHeight="738.0" prefWidth="200.0" />
          </children>
       </VBox>
