--- a/src/main/gui/mainView.fxml
+++ b/src/main/gui/mainView.fxml
@@ -30,7 +30,7 @@
                               <Insets right="85.0" />
                            </HBox.margin>
                         </Label>
-                        <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" text="-">
+                        <Button fx:id="btnAddCategory" mnemonicParsing="false" onAction="#handleAddCategory" prefHeight="26.0" prefWidth="26.0" text="+">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -38,7 +38,7 @@
                               <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                            </HBox.margin>
                         </Button>
-                        <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" text="+">
+                        <Button fx:id="btnRemoveCategory" mnemonicParsing="false" onAction="#handleRemoveCategory" prefHeight="26.0" prefWidth="26.0" text="-">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
@@ -50,7 +50,7 @@
                   </HBox>
                </children>
             </VBox>
-            <ListView prefHeight="738.0" prefWidth="200.0" />
+            <ListView fx:id="lstviewCategories" prefHeight="738.0" prefWidth="200.0" />
          </children>
       </VBox>
    </left>
@@ -70,7 +70,7 @@
                         <Insets right="10.0" />
                      </HBox.margin>
                   </Label>
-                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" text="-">
+                  <Button fx:id="btnAddMovie" mnemonicParsing="false" onAction="#handleAddMovie" prefHeight="26.0" prefWidth="26.0" text="+">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -78,7 +78,7 @@
                         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                      </HBox.margin>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="26.0" text="+">
+                  <Button fx:id="btnRemoveMovie" mnemonicParsing="false" onAction="#handleRemoveMovie" prefHeight="26.0" prefWidth="26.0" text="-">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -88,7 +88,7 @@
                   </Button>
                </children>
             </HBox>
-            <TableView prefHeight="738.0" prefWidth="200.0" />
+            <TableView fx:id="tblviewMovies" prefHeight="738.0" prefWidth="200.0" />
          </children>
       </VBox>
    </center>
