--- a/src/main/gui/mainView.fxml
+++ b/src/main/gui/mainView.fxml
@@ -10,7 +10,6 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="768.0" prefWidth="1024.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.gui.mainViewController">
    <left>
       <VBox prefHeight="768.0" prefWidth="250.0" BorderPane.alignment="CENTER">
@@ -27,9 +26,14 @@
                               <Insets left="5.0" />
                            </padding>
                            <HBox.margin>
-                              <Insets right="85.0" />
+                              <Insets right="50.0" />
                            </HBox.margin>
                         </Label>
+                        <Button fx:id="btnEditCategory" mnemonicParsing="false" onAction="#handleEditCategory" prefHeight="26.0" prefWidth="40.0" text="edit">
+                           <HBox.margin>
+                              <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                           </HBox.margin>
+                        </Button>
                         <Button fx:id="btnAddCategory" mnemonicParsing="false" onAction="#handleAddCategory" prefHeight="26.0" prefWidth="26.0" text="+">
                            <font>
                               <Font name="System Bold" size="12.0" />
@@ -82,6 +86,11 @@
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
+                     <HBox.margin>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnEditMovie" mnemonicParsing="false" onAction="#handleEditMovie" prefHeight="26.0" prefWidth="40.0" text="edit">
                      <HBox.margin>
                         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                      </HBox.margin>
