sat navne på parameters og close knapper virker

--- a/src/main/gui/newVideo/NewVideoView.fxml
+++ b/src/main/gui/newVideo/NewVideoView.fxml
@@ -121,7 +121,7 @@
             </HBox>
             <HBox prefHeight="25.0" prefWidth="600.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="55.0" text="Cancel">
+                  <Button fx:id="btnCancelNewVideo" cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="55.0" text="Cancel">
                      <HBox.margin>
                         <Insets left="265.0" right="15.0" />
                      </HBox.margin>
