--- a/src/main/gui/editCategory/EditCategoryView.fxml
+++ b/src/main/gui/editCategory/EditCategoryView.fxml
@@ -14,7 +14,7 @@
    <top>
       <VBox prefHeight="29.0" prefWidth="270.0" BorderPane.alignment="CENTER">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="500.0" text="New Category">
+            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="500.0" text="Edit Category">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
