--- a/src/main/gui/editCategory/EditCategoryView.fxml
+++ b/src/main/gui/editCategory/EditCategoryView.fxml
@@ -51,7 +51,7 @@
             </HBox>
             <HBox prefHeight="25.0" prefWidth="270.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="55.0" text="Cancel">
+                  <Button fx:id="btnCancelEditCategory" cancelButton="true" mnemonicParsing="false" onAction="#handleCancel" prefHeight="25.0" prefWidth="55.0" text="Cancel">
                      <HBox.margin>
                         <Insets left="160.0" right="15.0" />
                      </HBox.margin>
