--- a/src/main/gui/mainView.fxml
+++ b/src/main/gui/mainView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
@@ -97,7 +98,13 @@
                   </Button>
                </children>
             </HBox>
-            <TableView fx:id="tblviewMovies" prefHeight="738.0" prefWidth="200.0" />
+            <TableView fx:id="tblviewMovies" prefHeight="738.0" prefWidth="200.0">
+               <columns>
+                  <TableColumn fx:id="mvName" prefWidth="75.0" text="Navn" />
+                  <TableColumn fx:id="mvPath" prefWidth="75.0" text="Sti" />
+                  <TableColumn fx:id="mvRating" prefWidth="75.0" text="Score" />
+                  <TableColumn fx:id="mvLastSeen" prefWidth="75.0" text="Sidst set" />
+               </columns></TableView>
          </children>
       </VBox>
    </center>
