--- a/src/main/gui/mainView.fxml
+++ b/src/main/gui/mainView.fxml
@@ -96,16 +96,6 @@
                         <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
                      </HBox.margin>
                   </Button>
-                  <Button fx:id="btnAddToCat" layoutX="144.0" layoutY="12.0" mnemonicParsing="false" onAction="#handleAddToCat" prefHeight="26.0" prefWidth="100.0" text="add to category">
-                     <HBox.margin>
-                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                     </HBox.margin>
-                  </Button>
-                  <Button fx:id="btnReomveFromCat" layoutX="189.0" layoutY="12.0" mnemonicParsing="false" onAction="#handleRemoveFromCat" prefHeight="26.0" prefWidth="140.0" text="remove from category">
-                     <HBox.margin>
-                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
-                     </HBox.margin>
-                  </Button>
                </children>
             </HBox>
             <TableView fx:id="tblviewMovies" prefHeight="370.0" prefWidth="200.0">
@@ -129,6 +119,16 @@
                         <Insets right="10.0" />
                      </HBox.margin>
                   </Label>
+                  <Button fx:id="btnAddToCat" mnemonicParsing="false" onAction="#handleAddToCat" prefHeight="26.0" prefWidth="26.0" text="+">
+                     <HBox.margin>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                     </HBox.margin>
+                  </Button>
+                  <Button fx:id="btnReomveFromCat" mnemonicParsing="false" onAction="#handleRemoveFromCat" prefHeight="26.0" prefWidth="26.0" text="-">
+                     <HBox.margin>
+                        <Insets bottom="2.0" left="2.0" right="2.0" top="2.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
             </HBox>
             <TableView fx:id="tblviewMoviesInCategory" prefHeight="338.0" prefWidth="200.0">
