--- a/src/main/gui/rateMovie/RatingView.fxml
+++ b/src/main/gui/rateMovie/RatingView.fxml
@@ -5,7 +5,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.Slider?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -30,22 +29,26 @@
    <center>
       <VBox prefWidth="270.0" BorderPane.alignment="CENTER">
          <children>
-            <HBox prefHeight="25.0" prefWidth="270.0">
+            <HBox prefHeight="50.0" prefWidth="270.0">
                <children>
-                  <Label alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="50.0" text="Rate" textAlignment="RIGHT">
+                  <Label alignment="CENTER_RIGHT" prefHeight="25.0" prefWidth="30.0" text="Rate" textAlignment="RIGHT">
                      <HBox.margin>
-                        <Insets right="10.0" />
+                        <Insets right="10.0" top="10.0" />
                      </HBox.margin>
                      <font>
                         <Font size="13.0" />
                      </font>
                   </Label>
-                  <Slider fx:id="sliderRating">
+                  <Slider fx:id="sliderRating" prefHeight="50.0" prefWidth="200.0">
                      <HBox.margin>
-                        <Insets bottom="6.0" left="6.0" right="6.0" top="6.0" />
+                        <Insets />
                      </HBox.margin>
                   </Slider>
-                  <TextField fx:id="txtFieldRating" onKeyTyped="#handleRatingtxtInput" prefHeight="26.0" prefWidth="50.0" />
+                  <Label fx:id="lblRating" alignment="CENTER" contentDisplay="CENTER" prefHeight="25.0" prefWidth="30.0" text="0.0">
+                     <HBox.margin>
+                        <Insets top="12.0" />
+                     </HBox.margin>
+                  </Label>
                </children>
                <VBox.margin>
                   <Insets bottom="5.0" left="5.0" right="5.0" top="15.0" />
